# Simbolo_chatbot_api

./: README.md  Simbolo Information - Sheet1.csv  __init__.py  langchain_db.ipynb  langchain_retriever.ipynb  langgraph_retriever.ipynb  main.py  pyproject.toml
